--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ footer {
     color: white;
     padding: 30px 0;
     text-align: center;
-    margin-top: 30%;
+    margin-top: 50%;
 }
 
 .footer-container {
@@ -248,4 +248,29 @@ body.dark-mode .social-icon {
     z-index: -1;
 }
 
-
+.sam{
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+}
+}
+.sam-left{
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+}
+margin-top: 20px
+    
+}
+.sam-right{
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+}
+margin-top: 20px;
+font-size: 2rem;
+font-style: italic;
+font-style: oblique;
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+}
