--- a/style.css
+++ b/style.css
@@ -1,54 +1,139 @@
-* {
-    margin: 0px;
-    padding: 0px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300&display=swap');
 
-}
-html{
-    height: 100%;
+
+/* Genral for all*/
+*{
+    margin: 0%;
+    padding: 0%;
 }
 body{
-    color: white;
-    background-color: white;
-    height: 100%;
-    
-
-
-
-
+    .poppins-light {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
-nav {
+.poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.poppins-medium {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.poppins-semibold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.poppins-light-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+ 
+}
+html{
+    scroll-behavior: smooth;
+}
+p{
+    color: rgb(85, 85,85);
+}
+
+/* Transition */
+a, .btn {
+    transition: all 300ms ease;
+}
+.desktop-nav{
     display: flex;
-    text-align: center;
-    justify-content: space-between;
+    justify-content: space-around;
+  padding: 20px;
+  background-color: rgb(87, 186, 186);
+  height: 10vh;
+  border-radius: 2px;
 
-    background-color: rgb(95, 95, 198);
-    height: 60px;
-    width: 100vw;
-    align-items: center;
+}
+.list{
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+ list-style: none;
+  gap: 2rem;
+  font-size: 1.5rem;
+}
+ul{
+  list-style: none;
+  padding-top: 2%;
+}
+a{
+ color: black;
+text-decoration: none;
+}
+a:hover{
+  color: grey;
+  text-decoration: underline;
+  text-decoration-color: rgb(181, 181, 181);
+  text-underline-offset: 1rem;
+}
+.logo{
+  padding: 1%;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+.logo:hover{
+  cursor: default;
+}
+#mobile{
+  display: flex;
+    justify-content: space-around;
+    display: none; 
+}
+.mobile-menu{
+  position: relative;
+  display: inline-block;
+}
+.mobile-icon{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 24px;
+  width:30px;
+  cursor: pointer;
+}
+.mobile-icon{
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transition:all 0.3 ease-in-out; 
+}
+.menu-links{
+  position: absolute;
+  top: 100%;
+  right: 0%;
+  background-color: white;
+  width: fit-content;
+  max-width: 0;
+  overflow: hidden;
+  transition:all 0.3 ease-in-out; 
+}
+.menu-links a{
+  display: block;
+  padding: 10px;
+  text-align: center;
+  font-size: 1.5rem;transition
+  color: black;
+  text-decoration : none;
+ transition:all 0.3 ease-in-out; 
 }
 
-nav a{
-    text-decoration: none;
-    color: white;
+.menu-links li{
+  list-style: none;
 }
-
-
-ul {
-    display: flex;
-    justify-content: space-evenly;
-    list-style: none;
-    padding-right: 25px;
-     
-}
-li{
-    display: inline block;
-    padding: 3px;
-    margin: 2px;
-}
-footer{
-    margin-top: 90%;
-    height: 100px;
-    background-color:rgb(95, 95, 198) ;
-    border-radius: 15%;
+.menu-links .open{
+  max-height: 300px;
 }
