--- a/style.css
+++ b/style.css
@@ -1,139 +1,71 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300&display=swap');
-
-
-/* Genral for all*/
-*{
-    margin: 0%;
-    padding: 0%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    .poppins-light {
-  font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.poppins-regular {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.poppins-medium {
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.poppins-semibold {
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-}
-
-.poppins-light-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  font-style: italic;
-}
- 
-}
-html{
-    scroll-behavior: smooth;
-}
-p{
-    color: rgb(85, 85,85);
-}
-
-/* Transition */
-a, .btn {
-    transition: all 300ms ease;
-}
-.desktop-nav{
-    display: flex;
-    justify-content: space-around;
-  padding: 20px;
-  background-color: rgb(87, 186, 186);
-  height: 10vh;
-  border-radius: 2px;
-
-}
-.list{
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
- list-style: none;
-  gap: 2rem;
-  font-size: 1.5rem;
-}
-ul{
-  list-style: none;
-  padding-top: 2%;
-}
-a{
- color: black;
-text-decoration: none;
-}
-a:hover{
-  color: grey;
-  text-decoration: underline;
-  text-decoration-color: rgb(181, 181, 181);
-  text-underline-offset: 1rem;
-}
-.logo{
-  padding: 1%;
-  text-decoration: none;
-  font-size: 1.5rem;
-}
-.logo:hover{
-  cursor: default;
-}
-#mobile{
-  display: flex;
-    justify-content: space-around;
-    display: none; 
-}
-.mobile-menu{
-  position: relative;
-  display: inline-block;
-}
-.mobile-icon{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 24px;
-  width:30px;
-  cursor: pointer;
-}
-.mobile-icon{
-  width: 100%;
-  height: 2px;
-  background-color: black;
-  transition:all 0.3 ease-in-out; 
-}
-.menu-links{
-  position: absolute;
-  top: 100%;
-  right: 0%;
-  background-color: white;
-  width: fit-content;
-  max-width: 0;
-  overflow: hidden;
-  transition:all 0.3 ease-in-out; 
-}
-.menu-links a{
-  display: block;
-  padding: 10px;
-  text-align: center;
-  font-size: 1.5rem;transition
+body {
   color: black;
-  text-decoration : none;
- transition:all 0.3 ease-in-out; 
+  font-family: Arial, sans-serif;
 }
 
-.menu-links li{
-  list-style: none;
+nav, .nav-desktop {
+  background-color: rgb(89, 223, 223);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 4.5rem;
 }
-.menu-links .open{
-  max-height: 300px;
+
+.logo {
+  margin-left: 20px;
+  font-size: 2rem;
+  cursor: default;
+  display: flex;
+  align-items: center;
+}
+
+ul {
+  display: flex;
+  align-items: center;
+  margin-right: 90px;
+  font-size: 1.5rem;
+  list-style: none;
+  gap: 1.2rem;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  transition: color 0.3s ease, text-decoration 0.3s ease;
+}
+
+a:hover {
+  color: rgb(152, 174, 240);
+  text-decoration: underline 0.2rem;
+}
+
+/* Intro photo section */
+#intro {
+  height: 300px;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+/*index photo wala ho coat wala*/
+.photo{
+  height: 100px;
+  margin-top: 100px ;
+  
+
+}
+img{
+  height: 500px;
+   border-radius: 20%;
+}
+
+.myself{
+   height: 100px;
+  margin-top: 300px ;
+  font-size: 2rem;
+  
 }
