--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ nav, .nav-desktop {
   cursor: default;
   display: flex;
   align-items: center;
+  text-decoration: none;
+  text-underline-position: none;
 }
 
 ul {
