--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ a:hover
   text-underline-offset: line;
 }
 .intro{
- height: 600px;
+ height: 650px;
     width: auto;
     text-align: center;
     margin-left: 310px;
@@ -87,7 +87,7 @@ margin-left: 30px;
 margin-top: 20px;
 }
 .education{
-  height: 400px;
+  height: 250px;
   background-color: rgb(39, 36, 36);
   color: white;
   font-size: medium;
@@ -118,8 +118,14 @@ margin-top: 20px;
 
 
 
-.next{
-  height: 200px;
+.project{
+  height: 600px;
+
+}
+.project1{
+display: flexbox;
+text-align: center;
+justify-content: space-between;
 }
 
 
@@ -161,5 +167,6 @@ footer{
   font-family: Arial, sans-serif;
   background: transparent;
   z-index: 1;
+  
    
 }
