--- a/style.css
+++ b/style.css
@@ -141,6 +141,10 @@ justify-content: space-between;
   margin-left:90px;
 
 }
+.aboutwala{
+  height: 300px;
+  width: auto;
+}
 
 
 
@@ -154,7 +158,10 @@ justify-content: space-between;
 
 
 footer{
+  background-color: #ccc;
   height: 200px;
+  width: auto;
+  padding-left: -71p;
   background-color: rgb(138, 180, 185);
   border-radius: 60px;
   padding: 19px;
