--- a/style.css
+++ b/style.css
@@ -141,9 +141,34 @@ justify-content: space-between;
   margin-left:90px;
 
 }
+/* About Page ko lagi code */
+
+
 .aboutwala{
+  width: 100%;
+  border-radius: 10px;
+  background-color: rgb(98, 125, 125);
   height: 300px;
-  width: auto;
+  
+  display: flex;
+  padding-top: 2%;
+  padding-bottom: 60px;
+
+}
+.right-about{
+  height: 250px;
+ background-color: rgb(97, 215, 241);
+    border-radius: 25%;
+    padding: 4%;
+    color: rgb(73, 35, 35);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-left:200px;
+    margin-right: 200px;
+    padding-bottom: 5px;
+}
+.Team{
+  height: 400px;
+
 }
 
 
