--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@
 /* ✅ Add padding to body or main section so content doesn’t hide under navbar */
 body {
     padding-top: 100px;   /* Equal to navbar height */
-    background-color: beige;
+    background: #2A7B9B;
+background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgba(40, 88, 176, 1) 61%, rgba(54, 227, 69, 1) 95%);
 }
 
 nav {
@@ -103,17 +104,17 @@ nav {
     
 }
 footer{
-  background-color: #ccc;
+  background-color:  rgb(0, 99, 110);
   height: 200px;
   width: auto;
   padding-left: -71p;
-  background-color: rgb(138, 180, 185);
+  background-color: rgb(0, 99, 110);
   border-radius: 60px;
   padding: 19px;
   text-align: center;
   font-size: 1.5rem;
-  background-color: rgb(138, 180, 185);
-  color: #ccc;
+  background-color:rgb(0, 99, 110);
+  color: rgb(0, 99, 110);
   text-align: center;
  
   font-family: Arial, sans-serif;
@@ -121,4 +122,13 @@ footer{
   z-index: 1;
   
    
+}
+
+@media (max-width:600px) {
+    .nav-list{
+        display: none;
+
+    }
+
+    
 }
