--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ nav {
     content: "";
     width: 0%;
     height: 2px;
-    background: rgb(22, 29, 27);
+    background: rgba(248, 5, 215, 0.987);
     display: block;
     margin: auto;
     transition: width 0.3s ease; /* smoother hover animation */
@@ -104,6 +104,72 @@ nav {
     color: rgb(255, 255, 255);
     
 }
+ /* this code is for the about page */
+ .main{
+    font-size: 2em;
+ }
+ .main hr{
+    text-align: center;
+    justify-content: center;
+    width: 12vw;
+    color: white;
+ }
+
+.default-about{
+    height: 500px;
+    padding: 4vh 5vw;
+    display: flex;
+
+}
+
+.default-about .about1{
+    width: 35vw;
+    padding-left: 7vw;
+
+}
+.default-about .about2{
+    border: 0.3vw solid red;
+  width: 56vw;
+  border-radius: 50px;
+  height: 55vh;
+  margin: 1.vw 0vw;
+}
+.default-about .about2 p{
+    font-size: 20px;
+    padding: 30px;
+    color:black;
+    top: 0;
+    opacity: 0;
+   position: relative;
+   animation: slideUp 2s ease-in-out 0.3s forwards;
+   transform: translateY(100px);
+}
+
+ .default-about .about1 img{
+    height: auto;
+    width: 25vw;
+    border-radius: 50%;
+    border: 0.3vw solid rgb(227, 43, 43);
+    position: relative;
+    left: -10%;
+    animation: slide 2s forwards;
+   
+
+ }
+
+ @keyframes slide{
+    to{
+        left: 0;
+    }
+
+ }
+ @keyframes slideUp {
+  to {
+     transform: translateY(0);   /* final position */
+     opacity: 1;
+  }
+}
+
 footer{
   background-color:  rgb(0, 99, 110);
   height: 200px;
@@ -133,8 +199,8 @@ footer{
 
     .default1 .right{
     height: 400px;
-    margin-left: 15px;
-    padding-top: 13px;
+    margin-left: 10vw;
+    padding-top: 2vw;
     font-size: 1.2rem;
     text-align: center; 
     justify-content: center;
