--- a/style.css
+++ b/style.css
@@ -119,12 +119,14 @@ nav {
     height: 500px;
     padding: 4vh 5vw;
     display: flex;
+    
 
 }
 
 .default-about .about1{
     width: 35vw;
     padding-left: 7vw;
+     
 
 }
 .default-about .about2{
@@ -133,6 +135,7 @@ nav {
   border-radius: 50px;
   height: 55vh;
   margin: 1.vw 0vw;
+   flex-wrap: wrap;
 }
 .default-about .about2 p{
     font-size: 20px;
@@ -143,6 +146,9 @@ nav {
    position: relative;
    animation: slideUp 2s ease-in-out 0.3s forwards;
    transform: translateY(100px);
+   text-align: left;
+    max-width: 800px;
+    margin: 0 auto;
 }
 
  .default-about .about1 img{
@@ -151,7 +157,7 @@ nav {
     border-radius: 50%;
     border: 0.3vw solid rgb(227, 43, 43);
     position: relative;
-    left: -10%;
+    left: -100%;
     animation: slide 2s forwards;
    
 
@@ -214,4 +220,58 @@ footer{
     .logo{
         margin-left: -34px;
     }
+
+    /* this code is for making responsive about page*/
+    .main{
+        font-size: medium;
+        
+    }
+    .main hr{
+        width: 22vw;
+    }
+    .default-about{
+    height: 500px;
+    padding: 4vh 5vw;
+    display: flex;
+    flex-wrap: wrap;
+    }
+    /* image wala ko ho yo */
+    .default-about .about1{
+    width: 35vw;
+    padding-left: 32vw;
+    height: 129px;
+     }
+    /*paragraph wala ko ho yo */
+    .default-about .about2{
+    border: 0.3vw solid red;
+    width: 88vw;
+    border-radius: 50px;
+    height: 50vh;
+    margin: 1.vw 0vw;
+    flex-wrap: wrap;
+   }
+   .default-about .about2 p{
+    font-size: 15px;
+    padding: 15px;
+    color:black;
+    top: 0;
+    opacity: 0;
+   position: relative;
+   animation: slideUp 2s ease-in-out 0.3s forwards;
+   transform: translateY(100px);
+   text-align: left;
+    max-width: 800px;
+    margin: 0 auto;
+   }
+ .default-about .about1 img{
+    height: auto;
+    width: 25vw;
+    border-radius: 50%;
+    border: 0.3vw solid rgb(227, 43, 43);
+    position: relative;
+    left: -10%;
+    animation: slide 2s forwards;
+
+
+   }
 }
