hr line is updated

--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ footer{
         font-size: medium;
         
     }
-    .main hr{
+    .main .hrabout{
         width: 22vw;
     }
     .default-about{
