--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@
 body {
     padding-top: 100px;
     /* Equal to navbar height */
-    background: #2A7B9B;
-    background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgba(40, 88, 176, 1) 61%, rgba(54, 227, 69, 1) 95%);
+    background: #e6f2f7;
+   
 }
 
 nav {
@@ -77,7 +77,13 @@ nav {
 .main {
     height: 800px;
 }
-
+.main h1{
+    top: 0;
+    opacity: 0;
+    position: relative;
+    animation: slideUp 2s ease-in-out 0.3s forwards;
+    transform: translateY(100px);
+}
 .default1 {
     height: 400px;
     display: flex;
@@ -89,6 +95,9 @@ nav {
     margin-top: 24px;
     height: 60vh;
     border-radius: 50px;
+    position: relative;
+    left: -60%;
+    animation:move 2s forwards ;
 }
 
 .myphotoleft {
@@ -102,6 +111,12 @@ nav {
     padding-top: 130px;
     font-size: 1.2rem;
     text-align: center;
+      top: 0;
+    opacity: 0;
+    position: relative;
+    animation: slideUp 2s ease-in-out 0.3s forwards;
+    transform: translateY(100px);
+
 }
 
 .default1 .right button {
@@ -199,11 +214,26 @@ nav {
         opacity: 1;
     }
 }
+@keyframes slidedown {
+    to {
+        transform: translateY(0);
+        /* final position */
+        opacity: 1;
+    }
+    
+}
+@keyframes move {
+    to{
+        left: 0;
+
+    }
+    
+}
 
 footer {
     background-color: rgb(0, 99, 110);
     height: 200px;
-    width: auto;
+    width: 100%;
     padding-left: -71p;
     background-color: rgb(0, 99, 110);
     border-radius: 60px;
@@ -253,7 +283,7 @@ footer {
 
     .default1 .right {
         height: 400px;
-        margin-left: 10vw;
+        margin-left: 3vw;
         padding-top: 2vw;
         font-size: 1.2rem;
         text-align: center;
