--- a/style.css
+++ b/style.css
@@ -26,6 +26,59 @@ body {
     background: #e6f2f7;
    
 }
+.sidebar {
+    position: fixed;
+    top: 0;
+    right: -220px; /* hidden by default */
+    width: 200px;
+    height: 100%;
+    background-color: #333;
+    color: white;
+    padding: 20px 10px;
+    box-shadow: -2px 0 5px rgba(0,0,0,0.3);
+    transition: right 0.3s ease;
+    z-index: 1000;
+  }
+
+  .sidebar-menu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .sidebar-menu li {
+    margin-bottom: 15px;
+  }
+
+  .sidebar-menu li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    display: block;
+  }
+
+  /* Show sidebar when active */
+  .sidebar.active {
+    right: 0;
+  }
+  
+
+  /* Optional: smaller sidebar on mobile */
+  @media (max-width: 768px) {
+
+    .sidebar {
+      width: 150px;
+      padding: 15px 10px;
+    }
+    
+  }
+  @media(min-width:768px)
+  {
+    .sidebar{
+        display: none;
+    }
+  }
+
 
 nav {
     display: flex;
